[fix]문제생성 수정 z-index 수정

--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -31,3 +31,7 @@ body {
   font-family : "suitesemi";
   src : url('./fonts/SUITE-SemiBold.ttf');
 } */
+
+p {
+  white-space: pre-wrap;
+}
